# chinese_clip_encode

./: README.md  __init__.py  chinese_clip_encode.py  pyproject.toml
